--- a/pledge/student/templates/registration/login.html
+++ b/pledge/student/templates/registration/login.html
@@ -1,7 +1,17 @@
-<h2>تسجيل الدخول</h2>
+{% extends "base/base.html" %}
+{% load crispy_forms_tags %}
+{% load i18n %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="send" />
-</form>
+{% block content %}
+    <form class="max-300 m-auto " method="post">
+
+        {% csrf_token %}
+        {{ form|crispy }}
+
+        <div class="control-group">
+            <div class="controls">
+                <input type="submit" class="btn btn-primary w-100 mt-4" value="{% trans 'login' %}">
+            </div>
+        </div>
+    </form>
+{% endblock %}
