--- a/pledge/student/templates/student/home.html
+++ b/pledge/student/templates/student/home.html
@@ -1,21 +1,28 @@
-{% load i18n %} 
+{% extends "base/base.html" %}
+{% load crispy_forms_tags %}
+{% load i18n %}
 
-{% if user.is_authenticated %}
-	<h1>welcom {{ user.username }}</h1>
-	<a href="{% url 'logout' %}">
-        {% translate "Logout" %}
-    </a>
-{% else %}
-	<a href="{% url 'login' %}">
-        {% translate "Please login" %}
-    </a>
-{% endif %}
+{% block content %}
+    {% if user.is_authenticated %}
+        <h1>{% translate "Welcom" %} {{ user.first_name }}</h1>
+        <a class="btn btn-outline-primary" href="{% url 'pledge' %}">
+            {% translate "Show Pledge" %}
+        </a>
+        <a class="btn btn-outline-danger" href="{% url 'logout' %}">
+            {% translate "Logout" %}
+        </a>
+    {% else %}
+        <a class="btn btn-outline-danger" href="{% url 'login' %}">
+            {% translate "Please login" %}
+        </a>
+    {% endif %}
 
 
-{% if messages %}
-  {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">
-      {{ message }}
-    </div>
-  {% endfor %}
-{% endif %}
+    {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+        </div>
+    {% endfor %}
+    {% endif %}
+{% endblock %}
