--- a/pledge/student/templates/student/pledge.html
+++ b/pledge/student/templates/student/pledge.html
@@ -1,7 +1,13 @@
-{% load i18n %} 
+{% extends "base/base.html" %}
+{% load crispy_forms_tags %}
+{% load i18n %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="send" />
-</form>
+{% block content %}
+    {% if user.is_authenticated %}
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="send" />
+        </form>
+    {% endif %}
+{% endblock %}
