--- a/pledge/student/templates/student/pledge.html
+++ b/pledge/student/templates/student/pledge.html
@@ -1,11 +1,7 @@
 {% extends "base/base.html" %}
-{% load crispy_forms_tags %}
 {% load i18n %}
 
 {% block content %}
-
-    {{ form|as_crispy_errors }}
-
     <form method="POST">
         {% csrf_token %}
         {% if object.pledge_type == 'S' %}
@@ -15,6 +11,8 @@
         {% elif object.pledge_type == 'D' %}
             {% include "student/dismiss.html" %}
         {% endif %}
+        <br><br>
+        {{ form.errors }}
         <br><br>
         <input class="btn btn-primary" type="submit" value="{% translate 'send' %}" />
     </form>
