--- a/pledge/student/templates/base/base.html
+++ b/pledge/student/templates/base/base.html
@@ -77,8 +77,8 @@
         </div>
         <div class="p-3">
             <p>{% translate "E-mail:" %}
-                <a href="mailto:info@kfupm.edu.sa">
-                    info@kfupm.edu.sa
+                <a href="mailto:admissions@kfupm.edu.sa">
+                    admissions@kfupm.edu.sa
                 </a>
             </p>
         </div>
