--- a/pledge/student/templates/registration/login.html
+++ b/pledge/student/templates/registration/login.html
@@ -10,7 +10,10 @@
 
         <div class="control-group">
             <div class="controls">
-                <input type="submit" class="btn btn-primary w-100 mt-4" value="{% trans 'login' %}">
+                <input type="submit" 
+                    class="btn btn-primary w-100 mt-4" 
+                    value="تسجيل الدخول">
+                    {% comment %} value="{% trans 'login' %}"> {% endcomment %}
             </div>
         </div>
     </form>
