update pledge templates

--- a/pledge/student/templates/base/base.html
+++ b/pledge/student/templates/base/base.html
@@ -42,7 +42,10 @@
         <div class="navbar_banner">
             <h1>
                 <span class="banner_span_bg">
-                    <strong id="welcome_text">{% translate "The Deanship welcomes you" %}</strong>
+                    <strong id="welcome_text">
+                    عمادة القبول والتسجيل ترحب بكم
+                    {% comment %} {% translate "The Deanship welcomes you" %} {% endcomment %}
+                    </strong>
                 </span>
             </h1>
         </div>
