--- a/pledge/student/templates/student/pledge.html
+++ b/pledge/student/templates/student/pledge.html
@@ -14,6 +14,10 @@
         <br><br>
         {{ form.errors }}
         <br><br>
-        <input class="btn btn-primary" type="submit" value="{% translate 'send' %}" />
+        <input 
+            class="btn btn-primary" 
+            type="submit" 
+            value="إرسال" />
+            {% comment %} value="{% translate 'send' %}" /> {% endcomment %}
     </form>
 {% endblock %}
