--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -2,12 +2,14 @@
 <br><br>
 تشير البيانات بأن أداءك الدراسي في الفصل الحالي كان دون المستوى المتوقع منك 
 كطالب تم قبوله في جامعة الملك فهد لتميزه الدراسي، وحيث أن هذا الأمر ينعكس 
-سلباً على معدلك العام وقد يترتب على ذلك الإيقاف النهائي في حال استمر الأداء 
+سلباً على معدلك العام فقد يترتب على ذلك الإيقاف النهائي في حال استمر الأداء 
 الدراسي بشكل متدني في الفصل الدراسي القادم لذا نأمل منك:
 <br>
- أن تقوم بوقفة مصارحة ومراجعة للتعرف على نقاط الضعف والأخطاء التي تمت 
-خلال هذا الفصل ووضع خطة للتصحيح وفي حال كنت تحتاج المساعدة فلا تتردد 
-لأنه يسعدنا أن نقوم بواجبنا.
+القيام بوقفة مصارحة ومراجعة للتعرف على نقاط الضعف والأخطاء التي تمت خلال هذا
+الفصل ووضع خطة للتصحيح وفي حال إن كنت تحتاج المساعدة فلا
+تتردد، حيث يسعدنا أن نقوم بواجبنا.
+<br>
+وتذكر  : ان الشخص الايجابي هو الذي يعزم على صنع فرص جديدة أكثر من تلك التي ضاعت منه
 <br><br>
 أسباب تدني الأداء في الفصل الحالي يعود الى: 
 {{ form.low_performance_reasons }}
@@ -18,26 +20,47 @@
 <h1 class="py-4">إقرار وتعهد فرصة نهائية</h1>
 
 
-أقر أنا الطالب ({{ object.student.first_name }}) رقمي الجامعي ({{ object.student.username }}) 
+أقر أنا الطالب {{ object.student.first_name }} رقمي الجامعي ({{ object.student.username }}) 
 بأنه تم إشعاري بحصولي على إنذار أكاديمي بسبب تدني أدائي الدراسي في الفصل الحالي ولما 
 لذلك من تبعات على مسيرتي الدراسية في الجامعة وما قد يترتب على ذلك من 
-إيقافي نهائي عن الدراسة فإنني أتعهد بأن يكون أدائي في الفصول القادمة متميزة 
-بما في ذلك تحقيق معدل فصلي لا يقل عن ({{ object.kfupm_gpa }}) في الفصل الدراسي ({{ object.next_tearm }}).
-
+إيقافي نهائي عن الدراسة فإنني أتعهد  بأن يكون أدائي في الفصول القادمة 
+متميزاً، بما في ذلك تحقيق:
+<ul>
+    <li>
+    الحصول على معدل فصلي لا يقل عن ({{ object.kfupm_gpa }}) 
+    في الفصل الدراسي ({{ object.next_tearm }}).
+    والاستمرار بالشرط الى ان يصبح معدلي التراكمي (2.00).
+    </li>
+    <li>
+    تسجيل (9) ساعات مواد علمية او مواد تخصص. 
+    </li>
+    <li>
+    عدم الانسحاب او الاعتذار نهائياً.
+    </li>
+</ul>
 <br><br>
 
-وفي حالة اخفاقي في تحقيق المعدل الفصلي المشروط بالفرصة النهائية، 
+وفي حالة إخفاقي في تحقيق المعدل الفصلي المشروط بالفرصة النهائية، 
 يحق للجامعة اتخاذ الإجراءات اللازمة والتي قد يترتب عليها إيقافي عن الدراسة نهائياً.
 
 <br><br>
 
 رقم جوال الطالب: 
 {{ form.phone }}
+<br><br>
+
 رقم جوال ولي أمر الطالب : 
 {{ form.phone_guardian }}
+<br><br>
 
+صلة القرابة:
+{{ form.phone }}
 <br><br>
 
 {{ form.is_approved }}
 
-أقر بالاطلاع والالتزام بالتعهد.              التاريخ: 09/12/2020م
+أقر بالاطلاع والالتزام بالتعهد.
+
+<br><br>
+
+التاريخ: 09/12/2020م
