--- a/pledge/student/templates/base/base.html
+++ b/pledge/student/templates/base/base.html
@@ -44,7 +44,10 @@
                 <span class="banner_span_bg">
                     <strong id="welcome_text">
                     عمادة القبول والتسجيل ترحب بكم
-                    {% comment %} {% translate "The Deanship welcomes you" %} {% endcomment %}
+                    {% comment %} 
+                    TODO: replace next with above
+                    {% translate "The Deanship welcomes you" %} 
+                    {% endcomment %}
                     </strong>
                 </span>
             </h1>
