--- a/pledge/student/templates/student/pledge.html
+++ b/pledge/student/templates/student/pledge.html
@@ -18,6 +18,9 @@
             class="btn btn-primary" 
             type="submit" 
             value="إرسال" />
-            {% comment %} value="{% translate 'send' %}" /> {% endcomment %}
+            {% comment %} 
+            TODO: replace next with above
+            value="{% translate 'send' %}" /> 
+            {% endcomment %}
     </form>
 {% endblock %}
