--- a/pledge/student/templates/base/head.html
+++ b/pledge/student/templates/base/head.html
@@ -15,6 +15,7 @@
             direction: rtl!important;
             text-align: right!important;
             {% comment %} 
+            TODO: replace next with above
             {% if LANGUAGE_CODE == 'ar' %}
                 direction: rtl!important;
                 text-align: right!important;
