--- a/pledge/student/templates/registration/login.html
+++ b/pledge/student/templates/registration/login.html
@@ -13,7 +13,10 @@
                 <input type="submit" 
                     class="btn btn-primary w-100 mt-4" 
                     value="تسجيل الدخول">
-                    {% comment %} value="{% trans 'login' %}"> {% endcomment %}
+                    {% comment %} 
+                    TODO: replace next with above
+                    value="{% trans 'login' %}"> 
+                    {% endcomment %}
             </div>
         </div>
     </form>
