--- a/pledge/student/templates/student/condition.html
+++ b/pledge/student/templates/student/condition.html
@@ -13,8 +13,17 @@
 وتذكر  :
 ان الشخص الايجابي هو الذي يعزم على صنع فرص جديدة أكثر من تلك التي ضاعت منه
 <br><br>
+
+{% if form.errors.low_performance_reasons %}
+        <div class="alert alert-danger">
+            الرجاء إختيار سبب تدني الأداء
+        </div>
+{% endif %}
+
 أسباب تدني الأداء في الفصل الحالي يعود الى: 
 {{ form.low_performance_reasons }}
+
+{{ form.low_performance_other_reasons }}
 
 <hr class="mt-5">
 
@@ -49,7 +58,7 @@
 <br><br>
 
 صلة القرابة:
-{{ form.phone }}
+{{ form.guardian_relation }}
 <br><br>
 
 {{ form.is_approved }}
