update pledge templates with the dean

--- a/pledge/student/templates/student/dismiss.html
+++ b/pledge/student/templates/student/dismiss.html
@@ -1,24 +1,14 @@
-عزيزي الطالب آمل قراءة هذه الرسالة بروية و تركيز.....
-<br><br>
-
-تشير البيانات بأن أداءك الدراسي في الفصل الحالي كان دون المستوى المتوقع منك كطالب تم قبوله في جامعة الملك فهد لتميزه الدراسي، وحيث أن هذا الأمر انعكس سلباً على معدلك العام وترتب على ذلك ايقافك عن الدراسة نهائياً وننصحك بالبحث عن جامعة اخرى.
-
-
-<hr class="mt-5">
-
-<h1 class="py-4">إقرار وتعهد بالإيقاف النهائي</h1>
-
-أقر أنا الطالب ({{ object.student.first_name }}) رقمي الجامعي ({{ object.student.username }}) بأنه تم إشعاري بحصولي على إيقاف نهائي عن الدراسة بسبب تدني أدائي الدراسي في الفصل الحالي وانخفاض معدلي العام ولا يحق لي المطالبة بإعادة القبول نهائياً.
+عزيزي الطالب {{ object.student.first_name }}
 
 <br><br>
 
-رقم جوال الطالب: 
-{{ form.phone }}
-رقم جوال ولي أمر الطالب : 
-{{ form.phone_guardian }}
+تشير البيانات بأن أداءك الدراسي في الفصل
+الحالي كان دون المستوى المتوقع منك كطالب تم قبوله في جامعة الملك فهد
+لتميزه الدراسي، وحيث تم منحك فرصة مشروطة سابقاً و لم تحقق الشرط يؤسفنا
+إشعارك بأنه تم ايقافك عن الدراسة نهائياً وننصحك بالبحث عن جامعة اخرى.
 
 <br><br>
 
-{{ form.is_approved }}
-
-أقر بالاطلاع والالتزام بالتعهد.
+نتمنى لك التوفيق في مستقبلك 
+و تذكر بأن فرص النجاح  ليست محصورة في مكان او زمان بل تتجدد الفرص و ان 
+الشخص الايجابي هو الذي يعزم على صنع فرص جديدة أكثر من تلك التي ضاعت منه.
