--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -1,4 +1,8 @@
-عزيزي الطالب آمل قراءة هذه الرسالة بروية و تركيز.....
+عزيزي الطالب {{ object.student.first_name }}
+
+<br><br>
+
+آمل قراءة هذه الرسالة بروية و تركيز.....
 <br><br>
 تشير البيانات بأن أداءك الدراسي في الفصل الحالي كان دون المستوى المتوقع منك 
 كطالب تم قبوله في جامعة الملك فهد لتميزه الدراسي، وحيث أن هذا الأمر ينعكس 
@@ -6,8 +10,8 @@
 الدراسي بشكل متدني في الفصل الدراسي القادم لذا نأمل منك:
 <br>
 القيام بوقفة مصارحة ومراجعة للتعرف على نقاط الضعف والأخطاء التي تمت خلال هذا
-الفصل ووضع خطة للتصحيح وفي حال إن كنت تحتاج المساعدة فلا
-تتردد، حيث يسعدنا أن نقوم بواجبنا.
+الفصل ووضع خطة للتصحيح وفي حال كنت تحتاج المساعدة فلا
+تتردد بالتواصل معنا، حيث أنه يسعدنا أن نقوم بواجبنا.
 <br>
 وتذكر  : ان الشخص الايجابي هو الذي يعزم على صنع فرص جديدة أكثر من تلك التي ضاعت منه
 <br><br>
@@ -23,30 +27,26 @@
 
 {{ form.low_performance_other_reasons }}
 
-<hr class="mt-5">
+<hr class="mt-4">
 
-<h1 class="py-4">إقرار وتعهد فرصة نهائية</h1>
+<h1 class="py-2">إقرار وتعهد فرصة نهائية</h1>
 
+وقد رأت اللجنة منحك فرصة نهائية مشروطة لتتمكن من تحسين أداءك الدراسي
+
+<br>
 
 أقر أنا الطالب {{ object.student.first_name }} رقمي الجامعي ({{ object.student.username }}) 
 بأنه تم إشعاري بحصولي على إنذار أكاديمي بسبب تدني أدائي الدراسي في الفصل الحالي ولما 
 لذلك من تبعات على مسيرتي الدراسية في الجامعة وما قد يترتب على ذلك من 
 إيقافي نهائي عن الدراسة فإنني أتعهد  بأن يكون أدائي في الفصول القادمة 
-متميزاً، بما في ذلك تحقيق:
+متميزاً، بما في ذلك:
 <ul>
     <li>
     الحصول على معدل فصلي لا يقل عن ({{ object.kfupm_gpa }}) 
     في الفصل الدراسي ({{ object.next_tearm }}).
     والاستمرار بالشرط الى ان يصبح معدلي التراكمي (2.00).
     </li>
-    <li>
-    تسجيل (9) ساعات مواد علمية او مواد تخصص. 
-    </li>
-    <li>
-    عدم الانسحاب او الاعتذار نهائياً.
-    </li>
 </ul>
-<br><br>
 
 وفي حالة إخفاقي في تحقيق المعدل الفصلي المشروط بالفرصة النهائية، 
 يحق للجامعة اتخاذ الإجراءات اللازمة والتي قد يترتب عليها إيقافي عن الدراسة نهائياً.
@@ -59,7 +59,6 @@
 
 رقم جوال ولي أمر الطالب : 
 {{ form.phone_guardian }}
-<br><br>
 
 صلة القرابة:
 {{ form.guardian_relation }}
