--- a/pledge/student/templates/student/condition.html
+++ b/pledge/student/templates/student/condition.html
@@ -1,4 +1,9 @@
-عزيزي الطالب آمل قراءة هذه الرسالة بروية و تركيز.....
+عزيزي الطالب {{ object.student.first_name }}
+
+<br><br>
+
+آمل قراءة هذه الرسالة بروية و تركيز.....
+
 <br><br>
 
 تشير البيانات بأن أداءك الدراسي في الفصل الحالي كان دون المستوى المتوقع منك 
@@ -6,9 +11,9 @@
 سلباً على معدلك العام وقد يترتب على ذلك الإيقاف النهائي في حال استمر الأداء 
 الدراسي بشكل متدني في الفصل الدراسي القادم، لذا نأمل منك:
 <br>
-القيام بوقفة مصارحة ومراجعة للتعرف على نقاط الضعف والأخطاء التي تمت خلال 
-هذا الفصل ووضع خطة للتصحيح وفي حال إن كنت تحتاج المساعدة فلا
-تتردد، حيث يسعدنا أن نقوم بواجبنا.
+القيام بوقفة مصارحة ومراجعة للتعرف على نقاط الضعف والأخطاء التي تمت خلال هذا
+الفصل ووضع خطة للتصحيح وفي حال كنت تحتاج المساعدة فلا
+تتردد بالتواصل معنا، حيث أنه يسعدنا أن نقوم بواجبنا.
 <br><br>
 وتذكر  :
 ان الشخص الايجابي هو الذي يعزم على صنع فرص جديدة أكثر من تلك التي ضاعت منه
@@ -25,29 +30,23 @@
 
 {{ form.low_performance_other_reasons }}
 
-<hr class="mt-5">
+<hr class="mt-4">
 
-<h1 class="py-4">إقرار وتعهد فرصة مشروطة</h1>
+<h1 class="py-2">إقرار وتعهد فرصة مشروطة</h1>
 
 أقر أنا الطالب {{ object.student.first_name }} رقمي الجامعي ({{ object.student.username }}) 
 بأنه تم إشعاري بحصولي على إنذار أكاديمي بسبب تدني أدائي الدراسي في الفصل 
 الحالي ولما لذلك من تبعات على مسيرتي الدراسية في الجامعة وما قد يترتب على 
 ذلك من إيقافي نهائي عن الدراسة، فإنني أتعهد بأن يكون أدائي في الفصول القادمة 
-متميزاً، بما في ذلك تحقيق:
+متميزاً، بما في ذلك:
 <ul>
     <li>
     الحصول على معدل فصلي لا يقل عن ({{ object.kfupm_gpa }}) 
     في الفصل الدراسي ({{ object.next_tearm }}).
     والاستمرار بالشرط الى ان يصبح معدلي التراكمي (2.00).
     </li>
-    <li>
-    تسجيل (9) ساعات مواد علمية او مواد تخصص. 
-    </li>
-    <li>
-    عدم الانسحاب او الاعتذار نهائياً.
-    </li>
 </ul>
-<br><br>
+
 وفي حالة اخفاقي في تحقيق المعدل الفصلي المشروط، يحق للجامعة اتخاذ 
 الإجراءات اللازمة والتي قد يترتب عليها إيقافي عن الدراسة نهائياً.
 
@@ -55,10 +54,6 @@
 
 رقم جوال الطالب: 
 {{ form.phone }}
-<br><br>
-
-صلة القرابة:
-{{ form.guardian_relation }}
 <br><br>
 
 {{ form.is_approved }}
