update pledge templeates

--- a/pledge/student/templates/student/condition.html
+++ b/pledge/student/templates/student/condition.html
@@ -1,5 +1,4 @@
-عزيزي الطالب {{ object.student.first_name }}
-
+عزيزي الطالب {{ object.student.first_name }} ({{ object.student.username }})
 <br><br>
 
 آمل قراءة هذه الرسالة بروية و تركيز.....
@@ -47,8 +46,12 @@
     </li>
 </ul>
 
-وفي حالة اخفاقي في تحقيق المعدل الفصلي المشروط، يحق للجامعة اتخاذ 
-الإجراءات اللازمة والتي قد يترتب عليها إيقافي عن الدراسة نهائياً.
+<span class="text-danger">
+وفي حالة اخفاقي في تحقيق المعدل الفصلي المشروط، يحق للجامعة إيقافي عن الدراسة نهائياً.
+</span>
+
+<br>
+تم تعليق دراستك بالجامعة حتى يتم توقيع التعهد
 
 <br><br>
 
