--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -1,5 +1,4 @@
-عزيزي الطالب {{ object.student.first_name }}
-
+عزيزي الطالب {{ object.student.first_name }} ({{ object.student.username }})
 <br><br>
 
 آمل قراءة هذه الرسالة بروية و تركيز.....
@@ -31,7 +30,7 @@
 
 <h1 class="py-2">إقرار وتعهد فرصة نهائية</h1>
 
-وقد رأت اللجنة منحك فرصة نهائية مشروطة لتتمكن من تحسين أداءك الدراسي
+عوضاً عن ايقافك رأت اللجنة منحك فرصة نهائية مشروطة لتتمكن من تحسين أداءك الدراسي
 
 <br>
 
@@ -48,8 +47,13 @@
     </li>
 </ul>
 
+<span class="text-danger">
 وفي حالة إخفاقي في تحقيق المعدل الفصلي المشروط بالفرصة النهائية، 
-يحق للجامعة اتخاذ الإجراءات اللازمة والتي قد يترتب عليها إيقافي عن الدراسة نهائياً.
+يحق للجامعة إيقافي عن الدراسة نهائياً.
+</span>
+
+<br>
+تم تعليق دراستك بالجامعة حتى يتم توقيع التعهد
 
 <br><br>
 
