--- a/pledge/student/templates/student/dismiss.html
+++ b/pledge/student/templates/student/dismiss.html
@@ -1,5 +1,4 @@
-عزيزي الطالب {{ object.student.first_name }}
-
+عزيزي الطالب {{ object.student.first_name }} ({{ object.student.username }})
 <br><br>
 
 تشير البيانات بأن أداءك الدراسي في الفصل
