--- a/pledge/student/static/base/main.css
+++ b/pledge/student/static/base/main.css
@@ -43,8 +43,9 @@ header {
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-.max-300 {
-    max-width: 300px;
+.max-400 {
+    max-width: 400px;
+    text-align: center;
 }
 
 
