--- a/pledge/student/templates/base/base.html
+++ b/pledge/student/templates/base/base.html
@@ -64,7 +64,7 @@
 
 
 <footer class="container bg-success text-light">
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between flex-wrap">
         <div class="p-3">
             <p>
                 {% translate "King Fahd University of Petroleum and Minerals ©" %}
