--- a/pledge/student/templates/student/condition.html
+++ b/pledge/student/templates/student/condition.html
@@ -31,8 +31,8 @@
     {{ form.low_performance_other_reasons }}
 </div>
 
-<div class="alert alert-danger m-4 mx-auto max-400">
-    لقد تم تعليق دراستك بالجامعة حتى يتم توقيع التعهد ادناه
+<div class="alert alert-danger m-4 mx-auto max-alert">
+    ولتجنب تعليق دراستك بالجامعة في الفصل الدراسي القادم يتوجب عيك استكمال التعهد ادناه
 </div>
 
 <h1 class="py-2">إقرار وتعهد فرصة مشروطة</h1>
@@ -51,11 +51,8 @@
 </ul>
 
 <span class="text-danger">
-وفي حالة اخفاقي في تحقيق المعدل الفصلي المشروط، سوف يتم إيقافي عن الدراسة نهائياً.
+وفي حالة إخفاقي في تحقيق المعدل الفصلي المشروط، سوف يتم إيقافي عن الدراسة نهائياً.
 </span>
-
-<br>
-تم تعليق دراستك بالجامعة حتى يتم توقيع التعهد
 
 <br><br>
 
