--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -28,8 +28,8 @@
     {{ form.low_performance_other_reasons }}
 </div>
 
-<div class="alert alert-danger m-4 mx-auto max-400">
-    لقد تم تعليق دراستك بالجامعة حتى يتم توقيع التعهد ادناه
+<div class="alert alert-danger m-4 mx-auto max-alert">
+    ولتجنب تعليق دراستك بالجامعة في الفصل الدراسي القادم يتوجب عيك استكمال التعهد ادناه
 </div>
 
 <h1 class="py-2">إقرار وتعهد فرصة نهائية</h1>
@@ -55,9 +55,6 @@
 وفي حالة إخفاقي في تحقيق المعدل الفصلي المشروط بالفرصة النهائية، 
 سوف يتم إيقافي عن الدراسة نهائياً.
 </span>
-
-<br>
-تم تعليق دراستك بالجامعة حتى يتم توقيع التعهد
 
 <br><br>
 
