--- a/pledge/student/static/base/main.css
+++ b/pledge/student/static/base/main.css
@@ -43,8 +43,12 @@ header {
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-.max-400 {
-    max-width: 400px;
+.max-300 {
+    max-width: 300px;
+}
+
+.max-alert {
+    max-width: 575px;
     text-align: center;
 }
 
