update pledge templates

--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -69,6 +69,9 @@
 {{ form.guardian_relation }}
 <br><br>
 
+يجب إرسال إفادة ولي الأمر باطلاعه على أداءك الدراسي  وتأكيد جاهزية الطالب مع إرفاق صورة هوية ولي الأمر  مذيلة بتوقيع ولي الأمر على البريد الالكتروني admissions@kfupm.edu.sa
+<br><br>
+
 {{ form.is_approved }}
 
 أقر بالاطلاع والالتزام بالتعهد.
