--- a/pledge/student/templates/student/condition.html
+++ b/pledge/student/templates/student/condition.html
@@ -60,5 +60,8 @@
 {{ form.phone }}
 <br><br>
 
+يجب إرسال إفادة ولي الأمر باطلاعه على أداءك الدراسي  وتأكيد جاهزية الطالب مع إرفاق صورة هوية ولي الأمر  مذيلة بتوقيع ولي الأمر على البريد الالكتروني admissions@kfupm.edu.sa
+<br><br>
+
 {{ form.is_approved }}
 أقر بالاطلاع والالتزام بالتعهد.
