update font bold

--- a/pledge/student/templates/student/condition.html
+++ b/pledge/student/templates/student/condition.html
@@ -50,9 +50,9 @@
     </li>
 </ul>
 
-<span class="text-danger">
+<b class="text-danger">
 وفي حالة إخفاقي في تحقيق المعدل الفصلي المشروط، سوف يتم إيقافي عن الدراسة نهائياً.
-</span>
+</b>
 
 <br><br>
 
