--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -51,10 +51,10 @@
     </li>
 </ul>
 
-<span class="text-danger">
+<b class="text-danger">
 وفي حالة إخفاقي في تحقيق المعدل الفصلي المشروط بالفرصة النهائية، 
 سوف يتم إيقافي عن الدراسة نهائياً.
-</span>
+</b>
 
 <br><br>
 
