update pledge templates

--- a/pledge/student/templates/student/condition.html
+++ b/pledge/student/templates/student/condition.html
@@ -32,12 +32,12 @@
 </div>
 
 <div class="alert alert-danger m-4 mx-auto max-alert">
-    ولتجنب تعليق دراستك بالجامعة في الفصل الدراسي القادم يتوجب عيك استكمال التعهد ادناه
+    ولتجنب تعليق دراستك بالجامعة في الفصل الدراسي القادم يتوجب عليك استكمال التعهد ادناه
 </div>
 
 <h1 class="py-2">إقرار وتعهد فرصة مشروطة</h1>
 
-أقر أنا الطالب {{ object.student.first_name }} رقمي الجامعي ({{ object.student.username }}) 
+أقر أنا الطالب <b>{{ object.student.first_name }}</b> رقمي الجامعي ({{ object.student.username }}) 
 بأنه تم إشعاري بحصولي على إنذار أكاديمي بسبب تدني أدائي الدراسي في الفصل 
 الحالي ولما لذلك من تبعات على مسيرتي الدراسية في الجامعة وما قد يترتب على 
 ذلك من إيقافي نهائي عن الدراسة، فإنني أتعهد بأن يكون أدائي في الفصول القادمة 
@@ -60,7 +60,8 @@
 {{ form.phone }}
 <br><br>
 
-يجب إرسال إفادة ولي الأمر باطلاعه على أداءك الدراسي  وتأكيد جاهزية الطالب مع إرفاق صورة هوية ولي الأمر  مذيلة بتوقيع ولي الأمر على البريد الالكتروني admissions@kfupm.edu.sa
+
+علما بأنه يتوجب عليك إشعار ولي الأمر بوضعك الدراسي
 <br><br>
 
 {{ form.is_approved }}
