--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="alert alert-danger m-4 mx-auto max-alert">
-    ولتجنب تعليق دراستك بالجامعة في الفصل الدراسي القادم يتوجب عيك استكمال التعهد ادناه
+    ولتجنب تعليق دراستك بالجامعة في الفصل الدراسي القادم يتوجب عليك استكمال التعهد ادناه
 </div>
 
 <h1 class="py-2">إقرار وتعهد فرصة نهائية</h1>
@@ -38,7 +38,7 @@
 
 <br>
 
-أقر أنا الطالب {{ object.student.first_name }} رقمي الجامعي ({{ object.student.username }}) 
+أقر أنا الطالب <b>{{ object.student.first_name }}</b> رقمي الجامعي ({{ object.student.username }}) 
 بأنه تم إشعاري بحصولي على إنذار أكاديمي بسبب تدني أدائي الدراسي في الفصل الحالي ولما 
 لذلك من تبعات على مسيرتي الدراسية في الجامعة وما قد يترتب على ذلك من 
 إيقافي نهائي عن الدراسة فإنني أتعهد  بأن يكون أدائي في الفصول القادمة 
@@ -69,7 +69,10 @@
 {{ form.guardian_relation }}
 <br><br>
 
-يجب إرسال إفادة ولي الأمر باطلاعه على أداءك الدراسي  وتأكيد جاهزية الطالب مع إرفاق صورة هوية ولي الأمر  مذيلة بتوقيع ولي الأمر على البريد الالكتروني admissions@kfupm.edu.sa
+
+يجب إرسال إفادة ولي الأمر بإطلاعه على أداءك الدراسي  وتأكيد جاهزيتك
+مع إرفاق 
+صورة هوية ولي الأمر  مذيلة بتوقيع ولي الأمر على البريد الالكتروني admissions@kfupm.edu.sa
 <br><br>
 
 {{ form.is_approved }}
