--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -1,4 +1,4 @@
-عزيزي الطالب {{ object.student.first_name }} الرقم الجامعي {{ object.student.username }}
+عزيزي الطالب <b>{{ object.student.first_name }}</b> الرقم الجامعي {{ object.student.username }}
 <br><br>
 
 آمل قراءة هذه الرسالة بروية و تركيز.....
