install xhtml2pdf and export_as_pdf function is ready

--- a/pledge/student/templates/student/pledge.html
+++ b/pledge/student/templates/student/pledge.html
@@ -14,7 +14,7 @@
         
         <br><br>
 
-        {% if not object.pledge_type == 'D' %}
+        {% if not object.pledge_type == object.PledgeType.DISMISS %}
         {{ form.errors }}
         <br><br>
         <input 
