update final.html pledge

--- a/pledge/student/templates/student/final.html
+++ b/pledge/student/templates/student/final.html
@@ -38,11 +38,39 @@
 <br><br>
 
 
-يجب إرسال إفادة ولي الأمر بإطلاعه على أداءك الدراسي  وتأكيد جاهزيتك
-مع إرفاق 
-صورة هوية ولي الأمر  مذيلة بتوقيع ولي الأمر على البريد الالكتروني admissions@kfupm.edu.sa
+يجب إرسال إفادة ولي الأمر بالصيغة ادناه على البريد الالكتروني admissions@kfupm.edu.sa
+
 <br><br>
 
 {{ form.is_approved }}
 
 أقر بالاطلاع والالتزام بالتعهد.
+
+<br><br>
+
+<b class="text-danger">
+صيغة إفادة ولي الأمر :
+</b>
+
+<br><br>
+
+صورة هوية ولي الأمر
+
+<br><br>
+
+أفيدكم بأنني أطلعت على أداء 
+{{ object.student.first_name }}
+الدراسي و آمل أن يتم منحه فرصة نهائية في الفصل الدراسي القادم لتحسين أداءه الدراسي حيث
+أنه على أتم الاستعداد و سوف أقوم بواجبي في دعمه و متابعته,
+وفي حال لم يحقق المعدل الدراسي المطلوب فسوف يتم إيقافه عن
+الدراسة نهائياً.
+<br><br>
+
+اسم ولي الأمر :
+<br>
+
+صلة القرابة:
+<br>
+توقيع ولي الأمر
+
+<br><br>
