--- a/pledge/report/templates/reports/list_choices.html
+++ b/pledge/report/templates/reports/list_choices.html
@@ -8,16 +8,28 @@
 
 
 {% block content %}
-<p><b>Kindly select from the list:</b></p>
-    {% if object %}
-        <ul>
-        {% for obj in object %}
-            <li>
-                <a href="{% url 'print-reports' view.kwargs.tearm obj.0 %}">
-                    {{ obj.1 }}
-                </a>
-            </li>
-        {% endfor %}
-        </ul>
-    {% endif %}
+<h1>Kindly select from the list:</h1>
+
+<div class="module">
+    <table>
+        <caption>
+            <a href="{% url 'admin:student_pledge_changelist' %}" class="section">Reasons</a>
+        </caption>
+    
+        <tbody>
+        {% if object %}
+            {% for obj in object %}
+                <tr class="model-group">
+                    <th scope="row">
+                        <a href="{% url 'print-reports' view.kwargs.tearm obj.0 %}">
+                            {{ obj.1 }}
+                        </a>
+                    </th>
+                </tr>
+            {% endfor %}
+        {% endif %}
+        </tbody>
+    </table>
+</div>
+
 {% endblock %}
